--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main_entrar.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main_entrar.xml
@@ -29,12 +29,12 @@
         app:layout_constraintVertical_bias="0.071" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/titleEntrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
         android:text="Entrar"
-        android:textColor="@color/textColor"
+        android:textColor="@color/azul3"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,11 +49,11 @@
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:background="@color/inputBackground"
+        android:background="@color/white2"
         android:hint="Digite seu e-mail"
         android:padding="10dp"
         android:textSize="16sp"
-        android:textColorHint="@color/escuro"
+        android:textColorHint="@color/preto"
         android:fontFamily="@font/poppins_regular"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
@@ -67,12 +67,12 @@
         android:id="@+id/senha"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:background="@color/inputBackground"
+        android:background="@color/white2"
         android:hint="Digite sua senha"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textSize="16sp"
-        android:textColorHint="@color/escuro"
+        android:textColorHint="@color/preto"
         android:fontFamily="@font/poppins_regular"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
@@ -86,7 +86,7 @@
         android:id="@+id/btn_entrar"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:backgroundTint="@color/secondary"
+        android:backgroundTint="@color/azul2"
         android:fontFamily="@font/poppins_semibold"
         android:text="Entrar"
         android:textColor="@color/white"
@@ -105,6 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lembrar de mim"
+        android:textColor="@color/azul2"
         android:fontFamily="@font/poppins_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +120,7 @@
         android:layout_height="wrap_content"
         android:text="Esqueceu a senha ?"
         android:fontFamily="@font/poppins_regular"
-        android:textColor="@color/escuro"
+        android:textColor="@color/preto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.841"
@@ -133,7 +134,7 @@
         android:layout_height="wrap_content"
         android:text="Não tem uma conta ?"
         android:fontFamily="@font/poppins_regular"
-        android:textColor="@color/escuro"
+        android:textColor="@color/preto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.331"
@@ -147,7 +148,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
         android:text="Cadastrar"
-        android:textColor="@color/textColor"
+        android:textColor="@color/azul3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.737"
