--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/values/colors.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/values/colors.xml
@@ -1,8 +1,19 @@
 <resources>
+
+    <!--  strings do proejto  -->
+    <string name="textCadastrese">Cadastre-se</string>
+    <string name="etNome">Nome</string>
+    <string name="etEmail">Email</string>
+    <string name="etSenha">Senha</string>
+    <string name="cbCondicoes">Concordo com as Condições de Serviço e Privacidade</string>
+    <string name="btnCriarConta">Criar Conta</string>
+    <string name="textentrarcont">Você tem conta? Entrar</string>
+
+    <!-- Paleta de cores -->
     <color name="white">#FFFFFF</color>
-    <color name="primary">#4BD3E7</color>
-    <color name="secondary">#00B3C9</color>
-    <color name="inputBackground">#F5F9FE</color>
-    <color name="textColor">#025E6D</color>
-    <color name="escuro">#000000</color>
+    <color name="azul1">#4BD3E7</color>
+    <color name="azul2">#00B3C9</color>
+    <color name="white2">#F5F9FE</color>
+    <color name="azul3">#025E6D</color>
+    <color name="preto">#000000</color>
 </resources>
