--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main_entrar.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main_entrar.xml
@@ -15,6 +15,8 @@
 
     <!-- Campo de Senha -->
 
+    <!-- Botão de Entrar -->
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
@@ -23,10 +25,10 @@
         android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.071" />
+        app:layout_constraintVertical_bias="0.132" />
 
     <TextView
         android:id="@+id/titleEntrar"
@@ -38,95 +40,82 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.267" />
-
-    <!-- Botão de Entrar -->
+        app:layout_constraintVertical_bias="0.341" />
 
     <EditText
-        android:id="@+id/email"
-        android:layout_width="0dp"
+        android:id="@+id/textmail"
+        android:layout_width="306dp"
         android:layout_height="50dp"
-        android:background="@color/white2"
-        android:hint="Digite seu e-mail"
+        android:layout_marginBottom="372dp"
+        android:background="@drawable/edit_text"
+        android:hint="Email"
         android:padding="10dp"
-        android:textSize="16sp"
-        android:textColorHint="@color/preto"
-        android:fontFamily="@font/poppins_regular"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.478" />
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <EditText
-        android:id="@+id/senha"
-        android:layout_width="0dp"
+        android:id="@+id/textsenha"
+        android:layout_width="306dp"
         android:layout_height="50dp"
-        android:background="@color/white2"
-        android:hint="Digite sua senha"
-        android:inputType="textPassword"
+        android:layout_marginBottom="300dp"
+        android:background="@drawable/edit_text"
+        android:hint="Senha"
         android:padding="10dp"
-        android:textSize="16sp"
-        android:textColorHint="@color/preto"
-        android:fontFamily="@font/poppins_regular"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.578" />
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <Button
         android:id="@+id/btn_entrar"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_width="306dp"
+        android:layout_height="54dp"
         android:backgroundTint="@color/azul2"
         android:fontFamily="@font/poppins_semibold"
         android:text="Entrar"
         android:textColor="@color/white"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.772" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.809" />
 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_regular"
         android:text="Lembrar de mim"
         android:textColor="@color/azul2"
-        android:fontFamily="@font/poppins_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.201"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.669" />
+        app:layout_constraintVertical_bias="0.702" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Esqueceu a senha ?"
         android:fontFamily="@font/poppins_regular"
+        android:text="Esqueceu a senha ?"
         android:textColor="@color/preto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintHorizontal_bias="0.804"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.662" />
+        app:layout_constraintVertical_bias="0.697" />
 
     <TextView
         android:id="@+id/textView2"
