--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/values/colors.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="white2">#F5F9FE</color>
     <color name="azul3">#025E6D</color>
     <color name="preto">#000000</color>
+    <color name="vermelho">#E33131</color>
 </resources>
