--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_esquecer_senha.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_esquecer_senha.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,86 +5,87 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".entrar">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="24dp"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center"
-        android:layout_weight="1">
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="46dp" />
+        tools:ignore="MissingConstraints">
 
-        <!-- Título Esqueceu a senha -->
+        <!-- Botão de voltar -->
+
+        <ImageView
+            android:id="@+id/btnVoltar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="24dp"
+            android:contentDescription="Voltar"
+            android:src="@drawable/voltar"
+            android:layout_gravity="start" />
+
+        <!-- Título "Esqueceu a senha ? " -->
+
         <TextView
-            android:id="@+id/textEntrar"
+            android:id="@+id/textEsquecerSenha"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginBottom="20dp"
-            android:text="Esqueceu a senha ?"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_bold"
+            android:text="Esqueceu a senha?"
             android:textColor="@color/azul3"
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <!-- Ilustração -->
+        <!-- Logo FecaPass -->
+
         <ImageView
             android:id="@+id/logo"
             android:layout_width="248dp"
             android:layout_height="173dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="24dp"
-            android:contentDescription="Logo FecaPass"
+            android:layout_marginTop="20dp"
+            android:contentDescription="Ilustração"
             android:src="@drawable/illustration" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="25dp" />
+        <!-- Texto recuperação de email -->
 
         <TextView
             android:id="@+id/textTexto"
             android:layout_width="301dp"
-            android:layout_height="84dp"
-            android:layout_marginBottom="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Não se preocupe! Insira seu e-mail abaixo e enviaremos um link para redefinir sua senha."
             android:textColor="@color/preto"
-            android:textSize="18sp"
-             />
+            android:textSize="18sp" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="31dp" />
-
+        <!-- Campo de E-mail -->
 
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="306dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edit_text"
             android:hint="Email"
             android:padding="10dp" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="29dp" />
+        <!-- Botão "Entrar" -->
 
-        <!-- Botão Entrar -->
         <Button
-            android:id="@+id/btnEntrar"
-            android:layout_width="302dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="40dp"
+            android:id="@+id/btn_entrar"
+            android:layout_width="306dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="50dp"
             android:backgroundTint="@color/azul2"
+            android:fontFamily="@font/poppins_semibold"
             android:text="Entrar"
-            android:fontFamily="@font/poppins_bold"
             android:textColor="@color/white"
-            android:textStyle="bold" />
+            app:cornerRadius="8dp" />
+
 
     </LinearLayout>
 
