--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main_entrar.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main_entrar.xml
@@ -5,18 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".entrar">
 
-    <!-- Logo -->
+    <!-- Botão de voltar -->
+    <ImageView
+        android:id="@+id/btnVoltar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="start"
+        android:contentDescription="Voltar"
+        android:src="@drawable/voltar"
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="30dp"
+        tools:ignore="MissingConstraints" />
 
-    <!-- Texto "Entrar" -->
-
-    <!-- Campo de E-mail -->
-
-    <!-- Campo de Senha -->
-
-    <!-- Botão de Entrar -->
-
+    <!-- Logo FecaPass -->
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
@@ -25,11 +28,12 @@
         android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.39"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.158" />
 
+    <!-- Título "Entrar" -->
     <TextView
         android:id="@+id/titleEntrar"
         android:layout_width="wrap_content"
@@ -45,6 +49,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.341" />
 
+    <!-- Campo de E-mail -->
     <EditText
         android:id="@+id/textmail"
         android:layout_width="306dp"
@@ -58,7 +63,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent" />
 
-
+    <!-- Campo de Senha -->
     <EditText
         android:id="@+id/textsenha"
         android:layout_width="306dp"
@@ -72,7 +77,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent" />
 
-
+    <!-- Botão "Entrar" -->
     <Button
         android:id="@+id/btn_entrar"
         android:layout_width="306dp"
@@ -89,6 +94,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.809" />
 
+    <!-- CheckBox para "Lembrar de mim" -->
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
@@ -103,8 +109,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.702" />
 
+    <!-- Texto "Esqueceu a senha?" -->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtEsqueceuSenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
@@ -115,10 +122,11 @@
         app:layout_constraintHorizontal_bias="0.804"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.697" />
+        app:layout_constraintVertical_bias="0.694" />
 
+    <!-- Texto "Não tem uma conta?" -->
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textSemConta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Não tem uma conta ?"
@@ -131,8 +139,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.872" />
 
+    <!-- Texto "Cadastrar", direcionando o usuário para a tela de cadastro -->
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textCadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
