--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/values/colors.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/values/colors.xml
@@ -1,20 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--  strings do proejto  -->
-    <string name="textCadastrese">Cadastre-se</string>
-    <string name="etNome">Nome</string>
-    <string name="etEmail">Email</string>
-    <string name="etSenha">Senha</string>
-    <string name="cbCondicoes">Concordo com as Condições de Serviço e Privacidade</string>
-    <string name="btnCriarConta">Criar Conta</string>
-    <string name="textentrarcont">Você tem conta? Entrar</string>
-
-    <!-- Paleta de cores -->
-    <color name="white">#FFFFFF</color>
-    <color name="azul1">#4BD3E7</color>
-    <color name="azul2">#00B3C9</color>
-    <color name="white2">#F5F9FE</color>
-    <color name="azul3">#025E6D</color>
-    <color name="preto">#000000</color>
-    <color name="vermelho">#E33131</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
