mudando cor do texto

--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/telaentrar.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/telaentrar.xml
@@ -119,7 +119,7 @@
             android:backgroundTint="@color/appColor2"
             android:fontFamily="@font/poppins_semibold"
             android:text="Entrar"
-            android:textColor="@color/appColor6"
+            android:textColor="@color/white2"
             android:textStyle="bold"
             app:cornerRadius="8dp" />
 
