--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,7 @@
             android:text="@string/btnCriarConta"
             app:cornerRadius="8dp"
             android:backgroundTint="@color/appColor2"
-            android:textColor="@color/appColor6"
+            android:textColor="@color/white2"
             android:textStyle="bold"
             android:onClick="verificarUsuario"/>
 
