--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/telaesquecisenha.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/telaesquecisenha.xml
@@ -82,6 +82,15 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"/>
 
+        <EditText
+            android:id="@+id/textsenha"
+            android:layout_width="306dp"
+            android:layout_height="50dp"
+            android:hint="Nova senha"
+            android:background="@drawable/edit_text"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"/>
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="29dp" />
