Conexão do backend com o android, usuario sendo cadastrado no banco de dados

--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,9 @@
             android:backgroundTint="@color/appColor2"
             android:textColor="@color/white2"
             android:textStyle="bold"
-            android:onClick="verificarUsuario"/>
+            android:onClick="cadastrarUsuario"
+
+            />
 
         <!-- Link para Login -->
          <TextView
