--- a/src/Frontend/FecaPass/app/src/main/res/values/caixavalues.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/values/caixavalues.xml
@@ -8,6 +8,7 @@
     <string name="cbCondicoes">Concordo com as Condições de Serviço e Privacidade</string>
     <string name="btnCriarConta">Criar Conta</string>
     <string name="textentrarcont">Você tem conta? Entrar</string>
+    <string name="textComprarIngresso">Comprar ingresso</string>
     <style name="SombraBotao">
         <item name="android:background">@drawable/dropshadow</item>
     </style>
