--- a/src/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,6 @@
             android:layout_height="50dp"
             android:hint="@string/etEmail"
             android:background="@drawable/edit_text"
-
             android:padding="10dp"
             android:layout_marginBottom="10dp" />
 
@@ -80,7 +79,6 @@
             android:layout_width="306dp"
             android:layout_height="50dp"
             android:background="@drawable/edit_text"
-
             android:hint="@string/etSenha"
             android:padding="10dp"
             android:layout_marginBottom="10dp" />
@@ -110,13 +108,12 @@
             android:layout_height="54dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="@string/btnCriarConta"
-            app:cornerRadius="8dp"
+            android:textSize="15sp"
+            app:cornerRadius="20dp"
             android:backgroundTint="@color/azul2"
             android:textColor="@color/branco"
-            android:textStyle="bold"
             android:onClick="cadastrarUsuario"
-            android:elevation="90dp"
-            />
+            android:elevation="90dp" />
 
         <!-- Link para Login -->
          <TextView
@@ -124,12 +121,12 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/poppins_regular"
-        android:layout_marginTop="30dp"
-        android:text="@string/textentrarcont"
-        android:textColor="@color/azul2"
-        android:textSize="14sp"
-        android:textStyle="bold"
-            android:onClick="mudarTela"/>
+             android:layout_marginTop="30dp"
+             android:text="@string/textentrarcont"
+             android:textColor="@color/azul2"
+             android:textSize="14sp"
+             android:textStyle="bold"
+             android:onClick="mudarTela"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
